blender_docs/theme/css/theme.css
/* ... */
.wy-control-group .wy-form-full {
    display: block;
    float: left;
    margin-right: 2.35765%;
    width: 100%;
    margin-right: 0;
}

.wy-control-group .wy-form-full:last-child {
    margin-right: 0;
}

.wy-control-group .wy-form-halves {
    display: block;
    float: left;
    margin-right: 2.35765%;
    width: 48.82117%}
.wy-control-group .wy-form-halves:last-child {
    margin-right: 0;
}

.wy-control-group .wy-form-halves:nth-of-type(2n) {
    margin-right: 0;
}

.wy-control-group .wy-form-halves:nth-of-type(2n+1) {
    clear: left;
}

.wy-control-group .wy-form-thirds {
    display: block;
    float: left;
    margin-right: 2.35765%;
    width: 31.76157%}
.wy-control-group .wy-form-thirds:last-child {
    margin-right: 0;
}

.wy-control-group .wy-form-thirds:nth-of-type(3n) {
    margin-right: 0;
}

.wy-control-group .wy-form-thirds:nth-of-type(3n+1) {
    clear: left;
}

.wy-control-group.wy-control-group-no-input .wy-control {
    margin: 0.5em 0 0 0;
    font-size: 90%}
.wy-control-group.fluid-input input[type="text"],
.wy-control-group.fluid-input input[type="password"],
.wy-control-group.fluid-input input[type="email"],
.wy-control-group.fluid-input input[type="url"],
.wy-control-group.fluid-input input[type="date"],
.wy-control-group.fluid-input input[type="month"],
.wy-control-group.fluid-input input[type="time"],
.wy-control-group.fluid-input input[type="datetime"],
.wy-control-group.fluid-input input[type="datetime-local"],
.wy-control-group.fluid-input input[type="week"],
.wy-control-group.fluid-input input[type="number"],
.wy-control-group.fluid-input input[type="search"],
.wy-control-group.fluid-input input[type="tel"],
.wy-control-group.fluid-input input[type="color"] {
    width: 100%}
.wy-form-message-inline {
    display: inline-block;
    padding-left: 0.3em;
    color: #666;
    vertical-align: middle;
    font-size: 90%}
.wy-form-message {
    display: block;
    color: #ccc;
    font-size: 70%;
    margin-top: 0.3125em;
    font-style: italic;
}

input {
    line-height: normal;
}

input[type="button"], input[type="reset"], input[type="submit"] {
    -webkit-appearance: button;
    cursor: pointer;
    font-family: "Lato", "proxima-nova", "Helvetica Neue", Arial, sans-serif;
    *overflow: visible;
}

input[type="text"], input[type="password"], input[type="email"], input[type="url"], input[type="date"], input[type="month"], input[type="time"], input[type="datetime"], input[type="datetime-local"], input[type="week"], input[type="number"], input[type="search"], input[type="tel"], input[type="color"] {
    -webkit-appearance: none;
    padding: 6px;
    display: inline-block;
    border: 1px solid #ccc;
    font-size: 80%;
    font-family: "Lato", "proxima-nova", "Helvetica Neue", Arial, sans-serif;
    box-shadow: inset 0 1px 3px #ddd;
    border-radius: 0;
    -webkit-transition: border 0.3s linear;
    -moz-transition: border 0.3s linear;
    transition: border 0.3s linear;
}

input[type="datetime-local"] {
    padding: 0.34375em 0.625em;
}

input[disabled] {
    cursor: default;
}

input[type="checkbox"], input[type="radio"] {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    padding: 0;
    margin-right: 0.3125em;
    *height: 13px;
    *width: 13px;
}

input[type="search"] {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
    -webkit-appearance: none;
}

input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="week"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="color"]:focus {
    outline: 0;
    outline: thin dotted \9;
    border-color: #333;
}

input.no-focus:focus {
    border-color: #ccc !important;
}

input[type="file"]:focus, input[type="radio"]:focus, input[type="checkbox"]:focus {
    outline: thin dotted #333;
    outline: 1px auto #129fea;
}

input[type="text"][disabled], input[type="password"][disabled], input[type="email"][disabled], input[type="url"][disabled], input[type="date"][disabled], input[type="month"][disabled], input[type="time"][disabled], input[type="datetime"][disabled], input[type="datetime-local"][disabled], input[type="week"][disabled], input[type="number"][disabled], input[type="search"][disabled], input[type="tel"][disabled], input[type="color"][disabled] {
    cursor: not-allowed;
    background-color: #f3f6f6;
    color: #cad2d3;
}

input:focus:invalid, textarea:focus:invalid, select:focus:invalid {
    color: #e74c3c;
    border: 1px solid #e74c3c;
}

input:focus:invalid:focus, textarea:focus:invalid:focus, select:focus:invalid:focus {
    border-color: #e74c3c;
}

input[type="file"]:focus:invalid:focus, input[type="radio"]:focus:invalid:focus, input[type="checkbox"]:focus:invalid:focus {
    outline-color: #e74c3c;
}

input.wy-input-large {
    padding: 12px;
    font-size: 100%}
textarea {
    overflow: auto;
    vertical-align: top;
    width: 100%}
select, textarea {
    padding: 0.5em 0.625em;
    display: inline-block;
    border: 1px solid #ccc;
    font-size: 0.8em;
    box-shadow: inset 0 1px 3px #ddd;
    -webkit-transition: border 0.3s linear;
    -moz-transition: border 0.3s linear;
    transition: border 0.3s linear;
}

select {
    border: 1px solid #ccc;
    background-color: #fff;
}

select[multiple] {
    height: auto;
}

select:focus, textarea:focus {
    outline: 0;
}

select[disabled], textarea[disabled], input[readonly], select[readonly], textarea[readonly] {
    cursor: not-allowed;
    background-color: #fff;
    color: #cad2d3;
    border-color: transparent;
}
/* ... */

